@@ -34,6 +34,8 @@
 * VisaNet Peru: Pass dummy email when not present [curiousepic]
 * PayU India: Add Maestro as supported card [curiousepic]
 * Cashnet: Don't retry [duff]
+* CardStream: Make Void call Cancel instead of Refund [curiousepic]
+
 
 == Version 1.58.0 (March 1, 2016)
 * Move Electron check out of CreditCard into CreditCardMethods [ThereExistsX]
